--- a/src/pages/pricing.pug
+++ b/src/pages/pricing.pug
@@ -10,27 +10,28 @@ block content
    div(class='mx-auto max-w-[563px] text-center')
     h2(class='mb-[16px]') Our Pricing Plans
     p When you’re ready to go beyond prototyping in Figma, Webflow is ready to help you bring your designs to life — without coding them. 
-  div(class='cards_plan flex items-start justify-between mt-[64px] gap-5')
+  div(class='cards_plan grid grid-cols-auto-fit-300 md:grid-cols-auto-fit-200 gap-5 mt-[64px]')
    each item in pricing 
-    article(class='w-1/2')
-     h4(class='mb-[20px]' data-content=item.dataContent)=item.price 
-     h3(class='mb-[8px] font-medium')=item.title 
-     p=item.describe 
-     ul 
-      each listItem in item.list
-       li=listItem
-     button(class="btn") Get started  
+    article(class='p-4 border rounded-lg')
+      h4(class='mb-[20px]' data-content=item.dataContent)=item.price 
+      h3(class='mb-[8px] font-medium')=item.title 
+      p=item.describe 
+      ul 
+        each listItem in item.list
+          li=listItem
+      button(class="btn") Get started
+
  block accordion_section
-   section(class='container flex items-start justify-between max-lg:flex-col max-lg:gap-y-7')
+   section(class='container flex items-start justify-between xl:flex-col xl:gap-y-7')
     block section_title 
-     div(class='max-w-[409px] max-lg:max-w-full')
+     div(class='max-w-[409px] xl:max-w-full')
       h2(class='mb-[16px]') Frequently asked questions
       a(href="./contact.html" , class='text-royal-blue') Contact us for more info
-     div(class='w-[50%] max-lg:w-full max-lg:px-[20px]')
+     div(class='w-[50%] xl:w-full xl:px-[20px]')
       ul
        each item in info_accordion
         li(class="list-square")
          details(class='accordion_details' , open=item.type)
           summary(class="summary_after flex justify-between space-x-2 mb-3") 
             h3(class='font-medium')=item.title
-          p(class='mx-auto max-w-[600px] mb-[20px] max-lg:max-w-full')=item.describe
+          p(class='mx-auto max-w-[600px] mb-[20px] xl:max-w-full')=item.describe
