--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -1,6 +1,6 @@
 div(class='container flex justify-between 2xl:flex-wrap md:!justify-between 2xl:justify-center')
  block logo
-  a(href="./index.html" , class=('text-base text-white'))
+  a(href="/" , class=('text-base text-white'))
    img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]') , loading="lazy")
    |Finsweet  
  nav(id="menu" , class='navigation md:display-none flex gap-x-[48px]')
