--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -25,7 +25,7 @@ block content
         p(class="mb-[16px]") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
         a(href="./work.html" , class="text-royal-blue") Get in touch with us
           img(src="./assets/images/arrow-right-blue.png" , alt="arrow-right" , class='ml-[12px]')
-      ul(class='grid grid-cols-2 gap-[48px] md:grid-cols-auto-fill-minmax-300 md:w-[98%]')
+      ul(class='grid grid-cols-2 gap-[28px] md:grid-cols-auto-fill-minmax-300 md:w-[98%]')
         each item in works
           li(class='max-w-[300px] md:max-w-full')
             img(src=`./assets/images/${item.img}`, loading="lazy")  
@@ -70,18 +70,18 @@ block content
         img(src=`./assets/images/${item.icon}`, alt=item.alt , class='object-cover',loading="lazy" )
         h3=item.title 
         p=item.describe
-  section(class='container flex items-start justify-between relative space-x-1')
+  section(class='container relative flex items-start justify-between gap-3 3xl:flex-col 3xl:pb-0 ')
    block section_title 
-    div(class='max-w-[409px]')
+    div(class='max-w-[409px] 3xl:max-w-full')
      h2(class='mb-[16px]') What our clients say about us
      p Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.
-   ul(class='single-item  max-w-[650px] ')
+   ul(class='single-item  max-w-[650px] 3xl:max-w-full ')
     each item in about
      li 
       article 
        p(class="text-base font-medium")=item.describe
        div(class="flex space-x-3 mt-[20px]")
-        img(src=`./assets/images/${item.img}`, alt=item.alt , class="w-[8%]" , loading="lazy")
+        img(src=`./assets/images/${item.img}`, alt=item.alt , class="w-[65px]" , loading="lazy")
         div 
          h3=item.name
          h4(class='text-xs font-light')=item.designation
