--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -37,7 +37,7 @@ section(class='bg-tint-blue pb-0')
      a(href='tel:0927627728525' class='text-[14px] text-dark-blue') 0927 6277 28525           
 section(class='container py-[30px] columns-2 gap-[10px] 3xl:flex 3xl:flex-col-reverse 3xl:justify-between') 
  p(class='text-dark-blue') Copyright 2024, Finsweet.com ❤ By 
-  a(href="https://github.com/YassineInbach/Finsweet" target="_blank") 
+  a(href="https://github.com/YassineInbach" target="_blank") 
    i 
     u Yassine inbach
  ul(class='flex space-x-[32px] float-right 3xl:flex-wrap justify-center') 
