--- a/src/pages/layout.pug
+++ b/src/pages/layout.pug
@@ -8,6 +8,7 @@ html(lang="en")
          title Finsweet
         link(rel="stylesheet", type="text/css", href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css")  
         link(rel="stylesheet", href="./assets/css/style.css")
+        link(rel="icon" , type="png" , href="./assets/images/favicon.png")
         script(src='https://kit.fontawesome.com/04a76b9a09.js', crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.6.0.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js')               
